src/core/grammer.txt
StatementList -> Statement (StatementList)?
Statement -> ( Expression | ReturnStmt | ExecuteStmt | CmdStmt | VarDeclaration | AssignStmt ) ';'?
ExecuteStmt -> ExecuteKeyword Expression Expression
VarDeclaration -> VarKeyword identifier ('=' Expression)?
AssignStmt -> identifier '=' Expression
FuncDeclaration -> 'func' identifier '(' ')' Expression
ExecuteKeyword -> 'if' | 'as' | 'at' | 'in'
CmdStmt -> '/' Expression
Expression -> Term (('+' | '-') Expression)?
Term -> Factor (('*' | '/') Term)?
Factor -> identifier | number | string | identifier '(' ExpressionList? ')'
Factor -> '(' Expression ')' | unaryPrefixOperator Expression | Expression unarySuffixOperator
Factor -> '{' StatementList? '}'
